# Visual_measurement

./: LICENSE.md  README.md
src/: .clang-tidy  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ZY_C  ZY_C.cpp  ZY_G  ZY_G.cpp  ZY_H  ZY_H.cpp  ZY_S  ZY_S.cpp  ZY_backsub  ZY_backsub.cpp  cmake_install.cmake  compile_commands.json
src/.cache/clangd/index/: ZY_C.cpp.922B55E34DE1C76C.idx  ZY_G.cpp.5BC88D6CAE74417E.idx  ZY_H.cpp.A7DE7A13B485E420.idx  ZY_S.cpp.FFD97A36AB145BFD.idx  ZY_backsub.cpp.5930EABDAD4F6E08.idx
week1/: Histogram.m  README.md  average_blur.m  canny_sharpen.m  door.tif  gaussian_blur.m  gray_scale.m  hough_line.m  morphology_gray.m  point_detection.m  prewitt_sharpen.m  robert_sharpen.m  sobel_sharpen.m
week1/result/: 周报.md
week2/: minboundrect.m  minboxing.m  realtime.m  sizemeausrement.m  videomaker.m  周报.md
week2/python-opencv/: imgprocess.py  real_time_measurement.py
week2/result/: 周报.md
week3/monocular/: monocular.m  process_result.avi
week3/pytorch/: handwriting.ipynb  model.pth  optimizer.pth  output.psd  pytorch_MNIST.ipynb  reference.md  test.ipynb  test.md
week3/result/: test.md  周报.md
week4/monocular/: metrology.ipynb
week4/result/: google_street_view.md  magnify.psd  周报.md
